Testing_Infra/Apps/Envoy/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: lab-proxy-config
    namespace: envoy-gateway-system
