Testing_Infra/Apps/Envoy/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: lab-gateway
  namespace: envoy-gateway-system 
  annotations:
    argocd.argoproj.io/sync-wave: "7"
spec:
  gatewayClassName: eg 
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: "*.kublab.org"
    allowedRoutes:
      namespaces:
        from: All
        
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "*.kublab.org"
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: lab-wildcard-tls
