Testing_Infra/Apps/Envoy/redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: global-https-redirect
  namespace: envoy-gateway-system
  annotations:
    argocd.argoproj.io/sync-wave: "8"
spec:
  parentRefs:
  - name: lab-gateway
    namespace: envoy-gateway-system
    sectionName: http
  hostnames:
  - "*.kublab.org"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
        port: 443
