Testing_Infra/Apps/Envoy/routes.yaml
# -----------------------------
# Vault Routing
# -----------------------------
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-route
  namespace: vault
spec:
  parentRefs:
  - name: lab-gateway
    namespace: envoy-gateway-system
    sectionName: https
  hostnames: 
  - "vault.kublab.org"
  rules:
  - backendRefs:
    - name: vault
      port: 8200
---
# -----------------------------
# Hubble Routing
# -----------------------------
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-route
  namespace: kube-system
spec:
  parentRefs:
  - name: lab-gateway
    namespace: envoy-gateway-system
    sectionName: https
  hostnames: 
  - "hubble.kublab.org"
  rules:
  - backendRefs:
    - name: hubble-ui
      port: 80
---
# -----------------------------
# ArgoCD Routing
# -----------------------------
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
  - name: lab-gateway
    namespace: envoy-gateway-system
    sectionName: https
  hostnames: 
  - "argocd.kublab.org"
  rules:
  - backendRefs:
    - name: argocd-server
      port: 80
